tests/baselines/reference/parserMemberVariableDeclaration5.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberVariableDeclarations/parserMemberVariableDeclaration5.ts(2,3): error TS1031: 'declare' modifier cannot appear on a class element.


==== tests/cases/conformance/parser/ecmascript5/MemberVariableDeclarations/parserMemberVariableDeclaration5.ts (1 errors) ====
    class C {
      declare Foo;
      ~~~~~~~
!!! error TS1031: 'declare' modifier cannot appear on a class element.
    }